--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,5 +1,5 @@
-nav.navbar.navbar-default.navbar-fixed-top
-  .container-fluid
+nav.navbar.navbar-default.navbar-custom.navbar-fixed-top
+  .container
     .navbar-header
       button.navbar-toggle.collapsed aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button" 
         span.sr-only Toggle navigation
@@ -21,7 +21,17 @@ nav.navbar.navbar-default.navbar-fixed-top
         - else 
           li 
             = link_to 'Sign Out', destroy_user_session_path, :method => :delete
+
+
 .container
-  ul
-    li
-      = link_to 'Sign In', new_user_session_path
+  h1
+    | Posts
+  .row
+    - @posts.each do |post|
+      .col-lg-8
+        .img-rounded 
+          = link_to image_tag(post.photo, size: "150x150"), post
+        h1
+          = link_to post.title, post
+
+        
