categories dropdown mainpage create, post filtering by categories, missing image default_url

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,37 +1,13 @@
-nav.navbar.navbar-default.navbar-custom.navbar-fixed-top
-  .container
-    .navbar-header
-      button.navbar-toggle.collapsed aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button" 
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand href="#"  Home
-    .collapse.navbar-collapse
-      ul.nav.navbar-nav
-        - if user_signed_in?
-          li
-            = link_to 'New Post', new_post_path 
-      ul.nav.navbar-nav.navbar-right
-        - unless user_signed_in?
-          li
-            = link_to 'Sign In', new_user_session_path
-          li
-            = link_to 'Sign Up', new_user_registration_path
-        - else 
-          li 
-            = link_to 'Sign Out', destroy_user_session_path, :method => :delete
-
-
 .container
   h1
-    | Posts
+    | 
   .row
     - @posts.each do |post|
       .col-lg-8
-        .img-rounded 
+        - if post.status == 'new'
           = link_to image_tag(post.photo, size: "150x150"), post
-        h1
           = link_to post.title, post
-
-        
+          |  
+          = post.price 
+          | $ 
+          = post.created_at
