--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -10,4 +10,4 @@
           |  
           = post.price 
           | $ 
-          = post.created_at
+          = post.created_at.strftime("%B, %d, %Y")
