profile page navigation, partial rendering

--- a/app/views/posts/_navbar.html.slim
+++ b/app/views/posts/_navbar.html.slim
@@ -12,9 +12,9 @@ nav.navbar.navbar-inverse
       ul.nav.navbar-nav
         - if user_signed_in?
           li
-            = link_to 'Profile', profile_path(current_user)
+            = link_to 'Profile', profile_root_path
           li
-            = link_to 'New Post', new_post_path  
+            = link_to 'New Post', new_post_path
       ul.nav.navbar-nav.navbar-right
         li.dropdown
           a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button" 
