--- a/app/views/layouts/profile.html.slim
+++ b/app/views/layouts/profile.html.slim
@@ -12,9 +12,9 @@ html
       .col-xs-3.col-md-3.col-lg-3
         .well.nav
           - if @user.has_role? :admin
-            = render 'admin'
+            = render 'profile/admin'
           - else
-            = render 'user'
+            = render 'profile/user'
 
       .col-lg-9.col-md-9.col-xs-9
         .well
