--- a/app/views/profile/_admin.html.slim
+++ b/app/views/profile/_admin.html.slim
@@ -1,7 +1,7 @@
 h4.text-center
   = @user.email
 li
-  = link_to 'Categories Manager', root_path, class: "btn btn-default"
+  = link_to 'Categories Manager', profile_categories_path, class: "btn btn-default"
 li 
   = link_to 'Users Manager', root_path, class: "btn btn-default"
 li
