--- a/app/views/profile/_user.html.slim
+++ b/app/views/profile/_user.html.slim
@@ -1,4 +1,4 @@
 h4.text-center
-  = @user.email
+  = current_user.email
 li
-  = link_to 'My Posts', root_path, class: "btn btn-default"
+  = link_to 'My Posts', profile_posts_path, class: "btn btn-default"
