--- a/app/views/layouts/profile.html.slim
+++ b/app/views/layouts/profile.html.slim
@@ -11,7 +11,7 @@ html
     .container
       .col-xs-3.col-md-3.col-lg-3
         .well.nav
-          - if @user.has_role? :admin
+          - if current_user.has_role? :admin
             = render 'profile/admin'
           - else
             = render 'profile/user'
