--- a/app/views/posts/_navbar.html.slim
+++ b/app/views/posts/_navbar.html.slim
@@ -6,8 +6,7 @@ nav.navbar.navbar-inverse
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand
-        = link_to image_tag("original/logo.png", size: "150x50"), root_path
+      a.navbar-brand= link_to image_tag("original/logo.png", size: "150x50"), root_path
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         - if user_signed_in?
