--- a/app/views/profile/categories/index.html.slim
+++ b/app/views/profile/categories/index.html.slim
@@ -9,6 +9,6 @@
         - @categories.each do |category|
           tr
             td.text-center= category.title
-            td.text-center= link_to 'Edit', root_path, class: "btn btn-success"
+            td.text-center= link_to 'Edit', edit_profile_category_path(category.id), class: "btn btn-success"
 - else
   | Permission denied. Please authenticate with correct user.
