--- a/app/views/profile/posts/index.html.slim
+++ b/app/views/profile/posts/index.html.slim
@@ -1,16 +1,20 @@
 .table-responsive
   table.table.table-bordered.table-striped
-    thead
+    thead.thead-inverse
       tr
         th.col-xs-2.text-center Photo
         th.col-xs-3.text-center Title
         th.col-xs-2.text-center Price
-        th.col-xs-1.text-center Published at
+        th.col-xs-1.text-center 
     tbody
       - @posts.each do |post|
         - if post.status == 'new'
           tr
             td.text-center= link_to image_tag(post.photo, size: "150x150"), post
             td.text-center= link_to post.title, post, class: "h2"
-            td.text-center= link_to post.price, post, class: "btn btn-success"
-            td.h5.text-center= post.created_at.strftime("%B, %d, %Y")
+            td.text-center= post.price
+            td.text-center
+              ul
+                li= link_to 'Publish', root_path, class: "btn btn-success"
+                li= link_to 'Edit', root_path, class: "btn btn-warning"
+                li= link_to 'Archive', root_path, class: "btn btn-danger"
