whenever set up

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -4,3 +4,4 @@
     img.img-responsive= image_tag(@post.photo, size: "900x300")
     '
     p.text-center= @post.description
+    p.text-center= @post.status
