--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -5,7 +5,7 @@
   = f.input :description, as: :text, :input_html => { :cols => 50, :rows => 10 }, required: true
   = f.input :photo, as: :file
   = f.input :deal, collection: ['Sale', 'Purchase', 'Exchange', 'Rent', 'Service'],  required: true
-  = f.button :submit 
+  = f.button :submit, class: "btn btn-primary"
  
 
 / TODO: make requirements and limits
