--- a/app/views/profile/posts/index.html.slim
+++ b/app/views/profile/posts/index.html.slim
@@ -20,7 +20,7 @@
                 - if post.may_publish?
                   = link_to 'Publish', post_publish_path(post.id), method: :put, class: "list-group-item list-group-item-success"
                 - if post.may_reject?
-                  = link_to 'Reject', post_reject_path(post.id), method: :put, class: "list-group-item list-group-item-danger"
+                  = link_to 'Reject', post_reject_path(post.id), class: "list-group-item list-group-item-danger"
               - else
                 - if post.may_review?
                   = link_to 'Review', post_review_path(post.id), method: :put, class: "list-group-item list-group-item-success"
