show page changes, alert for edit page with admin comment

--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -1,2 +1,7 @@
-.well
+.center-block.col-md-6 style=("float: none;")
+  h4.text-center Edit Post
+  - if @post.comment?
+    .alert.alert-warning
+      h5 Reject details:
+      = @post.comment
   = render 'form'
