post price decoration, start making log: logger method at post model, logging option after all transitions

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -17,6 +17,6 @@
           tbody
             tr
               td.text-center= @post.status
-              td.text-center= @post.price
+              td.text-center= "$ #{@post.price}"
               td.text-center= @post.user_id
               td.text-center= @post.deal
