--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -19,7 +19,7 @@
         tr
           td.text-center= link_to image_tag(post.photo, size: "150x150"), post
           td.text-center= link_to post.title, post, class: "h2"
-          td.text-center= post.price
+          td.text-center= "$ #{post.price}"
           td.text-center= post.deal
           td.h5.text-center= post.created_at.strftime("%B, %d, %Y")
 .text-center
