--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -6,6 +6,9 @@
   .panel-body
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f|
       .form-group
+        = f.label :name
+        = f.text_field :name, class: 'form-control'
+      .form-group
         = f.label :avatar
         = f.file_field :avatar, class: 'form-control'
       .form-group
