--- a/app/views/profile/_admin.html.slim
+++ b/app/views/profile/_admin.html.slim
@@ -1,6 +1,6 @@
 .text-center
   = image_tag current_user.avatar, size: "100x100"
-  h4= current_user.email
+  h4= current_user.name
   .list-group
     = link_to 'Categories Manager', profile_categories_path, class: "list-group-item"
     = link_to 'Users Manager', profile_users_path, class: "list-group-item"
