--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -7,7 +7,7 @@
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
       .form-group
         = f.label :name
-        = f.input_field :name, class: 'form-control'
+        = f.text_field :name, class: 'form-control'
       .form-group
         = f.label :email
         = f.email_field :email, autofocus: true, class: 'form-control'
